[package]
name = "lily-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# actix
actix-web = "4"
actix-cors = "0.6.0"
actix-files = "0.6.2"
actix-service = "2.0.2"
actix-multipart = "0.4.0"
actix-session = "0.5.0-beta.7"

# crates
anyhow = "1.0.33"
