[package]
name = "lily-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# actix
actix-web = "4"
actix-cors = "0.6.0"
actix-files = "0.6.2"
actix-service = "2.0.2"
actix-multipart = "0.4.0"
actix-session = "0.5.0-beta.7"

# crates
anyhow = "1.0.33"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
futures = "0.3.6"
sanitize-filename = "0.3.0"
uuid = { version = "0.8", features = ["serde", "v1", "v4"] }
chrono = "0.4.19"
rand = "0.8.3"
jsonwebtoken = "7"
derive_more = "0.99.11"
bytes = "1.2.1"

# image libs
image = "0.24.3"

#db
scylla = "0.3.1"

#logger
env_logger = "0.8"
log = "0.4"